--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
   "description": "web start",
   "main": "index.js",
   "scripts": {
-    "build": "npm run build-static && webpack -p",
-    "build-static": "cp src/index.html public/",
-    "clean-all": "rm -rf public && mkdir public",
     "dev": "webpack-dev-server",
-    "start": "npm run build && http-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Emily Reese <emilyreese@fastmail.com>",
@@ -19,7 +15,10 @@
     "babel-preset-es2015": "^6.22.0",
     "css-loader": "^0.26.2",
     "extract-text-webpack-plugin": "^2.0.0",
+    "html-webpack-plugin": "^2.28.0",
     "imports-loader": "^0.7.1",
+    "pug": "^2.0.0-beta11",
+    "pug-loader": "^2.3.0",
     "style-loader": "^0.13.2",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
